--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -14,9 +14,6 @@ keypoints:
 - "A jet is defined by its reclustering algorithm and its constituents. In current experiments, jets are reclusted using the anti-kt algorithm. Depending on their constituents, in CMS, we called jets reclustered from genparticles as GenJets, calorimeter clusters as CaloJets, and particle flow candidates as PFJets."
 ---
 
-Full set of intro slides: Slides 1-24 (FIXME)
-
----
 
 > ## After following the instructions in the setup:
 >
@@ -72,7 +69,7 @@ Most jet algorithms at hadron colliders use a so-called "clustering sequence". T
 
 These algorithms follow this recipe:
  * iteratively find the two particles in the event which are closest in some distance measure and combine them. 
- * Defining $d_{ij}=min(p^{2p}_{ti},p^{2p}_{tj})\DeltaR^{2}_{ij}/R^2$ and $d_{iB} = p_{ti}^{2p}$. We combine two particles if $d_{ij} < d_{iB}$. 
+ * Defining $$d_{ij} = min(p^{2p}_{ti},p^{2p}_{tj})\DeltaR^{2}_{ij}/R^2$$ and $d_{iB} = p_{ti}^{2p}$. We combine two particles if $d_{ij} < d_{iB}$. 
    * if $p=1$ then _kt algorithm_ (KT)
    * if $p=0$ then _Cambridge Aachen algorithm_ (CA)
    * if $p=-1$ then _kt algorithm_ (KT)
@@ -129,14 +126,14 @@ You can also read these excellent overviews of jet substructure techniques:
 
 > ## Discussion 1.1
 >
-> Before you run the _Comparing jet areas between AK4 and AK8_ part of the notebook, what type of
+> Before you run the exercise 1.1, what type of
 > distribution do you expect for the areas of the AK4 and AK8 jets?
 {: .discussion}
 
 
 > ## Question 1.1
 >
-> After running the _Comparing jet areas between AK4 and AK8_ part of the notebook: Try modifying the plotting cell to add vertical lines at area values corresponding to $\pi R^2$. Do the histogram peaks line up with these values?
+> After exercise 1.1: Try modifying the plotting cell to add vertical lines at area values corresponding to $\pi R^2$. Do the histogram peaks line up with these values?
 {: .challenge}
 
 > ## Solution 1.1
@@ -191,7 +188,7 @@ In CMS we recluster two types of PFJets:
 
 > ## Question 1.2
 >
-> After running the notebook's Exercise 2. As you can see, the agreement between Calo, Gen, and Pfjet could be better! Can you guess why?
+> After running the notebook's Exercise 1.2: As you can see, the agreement between Calo, Gen, and Pfjet could be better! Can you guess why?
 {: .challenge}
 
 > ## Solution 1.2
