--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -81,7 +81,7 @@ These algorithms follow this recipe:
 </figure>
 
 > ## How the different jet algorithms look like in our events?
-> <img src="../fig/JHEP04_2008_063.jpg" alt="" style="width: 600px;"/>
+> <img src="../fig/episode1/JHEP04_2008_063.jpg" alt="" style="width: 600px;"/>
 > Comparison of jet areas for four different jet algorithms, from "The anti-kt Clustering Algorithm" by Cacciari, Salam, and Soyez [JHEP04, 063 (2008), arXiv:0802.1189].
 {: .callout}
 
