--- a/notebooks/master/Jet_Energy_Corrections.ipynb
+++ b/notebooks/master/Jet_Energy_Corrections.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1\n",
+    "## Exercise 3.1\n",
     "\n",
     "First, for simplicity, let's apply a simple selection in the jet eta of the jets we are going to study:"
    ]
@@ -147,20 +147,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Exercise 2: Before and after JECs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Applying JECs to uncorrected jets:"
+    "### Before and after JECs\n",
+    "\n",
+    "Let's looks at some distributions to understand the difference in this correction:"
    ]
   },
   {
@@ -265,7 +256,7 @@
     }
    },
    "source": [
-    "## Exercise 3: JEC Uncertainties\n",
+    "## Exercise 3.2: JEC Uncertainties\n",
     "\n",
     "Let's apply the JEC uncertainties (one sigma up and down) to the uncorrected jets:"
    ]
@@ -365,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 4: Jet Energy Resolution\n",
+    "## Exercise 3.3: Jet Energy Resolution\n",
     "\n",
     "The next cell is the `coffea` implementation to apply jet energy resolution. Notice that this implementation does **not** uses the json-pog but the all txt files. \n",
     "\n",
