--- a/notebooks/master/Pileup.ipynb
+++ b/notebooks/master/Pileup.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1: Pileup event variables\n",
+    "## Exercise 2.1: Pileup event variables\n",
     "\n",
     "Let's make histograms of different pileup event variables and look at their distributions:"
    ]
@@ -120,7 +120,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 2: Pileup Reweighting \n",
+    "## Exercise 2.2: CHS vs PUPPI\n",
+    "\n",
+    "Let's play with some basic quantities between CHS and PUPPI."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jets = events.Jet[ (events.Jet.pt > 30) ]\n",
+    "jets_puppi = events.JetPuppi[ (events.JetPuppi.pt > 30) ]\n",
+    "\n",
+    "hists = (\n",
+    "    hist.Hist.new\n",
+    "    .StrCategory(['chs', 'puppi'], name='pu', growth=True)\n",
+    "    .Reg(50, 0, 500, name=\"pt\", label='pt')\n",
+    "    .Reg(40, -5, 5, name=\"eta\", label='eta')\n",
+    "    .Weight()\n",
+    "    .fill(\n",
+    "        pu='chs',\n",
+    "        pt=ak.flatten(jets.pt) ,\n",
+    "        eta=ak.flatten(jets.eta )\n",
+    "    )\n",
+    "    .fill(\n",
+    "        pu='puppi',\n",
+    "        pt=ak.flatten(jets_puppi.pt ),\n",
+    "        eta=ak.flatten(jets_puppi.eta )\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "hists.project('pu', 'pt').plot1d(ax=ax)\n",
+    "ax.legend()\n",
+    "ax.set_yscale(\"log\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "hists.project('pu', 'eta').plot1d(ax=ax)\n",
+    "ax.legend()\n",
+    "# ax.set_yscale(\"log\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2.3: Pileup Reweighting \n",
     "\n",
     "Let's use again the `json-pog` and `correctionlib` to access the pileup weights:"
    ]
@@ -234,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 3: Jet ID"
+    "## Exercise 2.4: Jet ID"
    ]
   },
   {
@@ -319,13 +380,6 @@
     "\n",
     "How different do the other jet distributions look like with jetId implemented?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
