--- a/notebooks/master/Jet_Substructure.ipynb
+++ b/notebooks/master/Jet_Substructure.ipynb
@@ -40,10 +40,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname_qcd = \"root://cmseos.fnal.gov//store/user/cmsdas/2023/short_exercises/jets/RunIISummer20UL18NanoAODv9/QCD_Pt-15to7000_TuneCP5_Flat2018_13TeV_pythia8/NANOAODSIM/20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/30000/792B4CD3-A001-F94F-9AAB-D74D532DE610.root\"\n",
-    "fname_ttbar = \"root://cmseos.fnal.gov//store/user/cmsdas/2023/short_exercises/jets/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/106X_upgrade2018_realistic_v16_L1v1-v1/2520000/130AF209-596A-BA46-BA9E-D8847511BB0F.root\"\n",
-    "fname_rsgluon=\"root://cmseos.fnal.gov//store/user/cmsdas/2023/short_exercises/jets/RunIISummer20UL18NanoAODv9/RSGluonToTT_M-1000_TuneCP5_13TeV-pythia8/NANOAODSIM/106X_upgrade2018_realistic_v16_L1v1-v1/130000/F2DC937C-90D2-CF40-9FCA-017BB8CD7B9E.root\"\n",
-    "fname_wjets=\"root://cmseos.fnal.gov//store/user/cmsdas/2023/short_exercises/jets/RunIISummer20UL18NanoAODv9/WJetsToQQ_HT-800toInf_TuneCP5_13TeV-madgraphMLM-pythia8/NANOAODSIM/106X_upgrade2018_realistic_v16_L1v1-v2/2550000/1651E9BC-5EFF-E149-A1C1-019EAA144F5E.root\"\n",
+    "fname_qcd = \"root://cmseos.fnal.gov//store/user/cmsdas/2024/short_exercises/jets/RunIISummer20UL18NanoAODv9/QCD_Pt-15to7000_TuneCP5_Flat2018_13TeV_pythia8/NANOAODSIM/20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/30000/792B4CD3-A001-F94F-9AAB-D74D532DE610.root\"\n",
+    "fname_ttbar = \"root://cmseos.fnal.gov//store/user/cmsdas/2024/short_exercises/jets/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/106X_upgrade2018_realistic_v16_L1v1-v1/2520000/130AF209-596A-BA46-BA9E-D8847511BB0F.root\"\n",
+    "fname_rsgluon=\"root://cmseos.fnal.gov//store/user/cmsdas/2024/short_exercises/jets/RunIISummer20UL18NanoAODv9/RSGluonToTT_M-1000_TuneCP5_13TeV-pythia8/NANOAODSIM/106X_upgrade2018_realistic_v16_L1v1-v1/130000/F2DC937C-90D2-CF40-9FCA-017BB8CD7B9E.root\"\n",
+    "fname_wjets=\"root://cmseos.fnal.gov//store/user/cmsdas/2024/short_exercises/jets/RunIISummer20UL18NanoAODv9/WJetsToQQ_HT-800toInf_TuneCP5_13TeV-madgraphMLM-pythia8/NANOAODSIM/106X_upgrade2018_realistic_v16_L1v1-v2/2550000/1651E9BC-5EFF-E149-A1C1-019EAA144F5E.root\"\n",
     "\n",
     "events_qcd = NanoEventsFactory.from_root( fname_qcd, schemaclass=NanoAODSchema.v6).events()\n",
     "events_ttbar = NanoEventsFactory.from_root( fname_ttbar, schemaclass=NanoAODSchema.v6).events()\n",
@@ -55,7 +55,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 4.1: Grooming and PU removal algorithms\n",
+    "## Exercise 4.1: Jet Mass\n",
+    "\n",
+    "Let's look a the different jet mass distributions for different processes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "hists_mass = (\n",
+    "    hist.Hist.new\n",
+    "    .StrCat([\"QCD\", \"ttbar\", \"RSGluon\", \"Wjets\"], name=\"dataset\")\n",
+    "    .Reg(50, 50, 300, name=\"mass\", label='Fatjet softdrop mass')\n",
+    "    .Weight()\n",
+    "    .fill(\n",
+    "        dataset='QCD',\n",
+    "        mass=ak.flatten( events_qcd.FatJet.msoftdrop ),\n",
+    "    )\n",
+    "    .fill(\n",
+    "        dataset='ttbar',\n",
+    "        mass=ak.flatten( events_ttbar.FatJet.msoftdrop ),\n",
+    "    )\n",
+    "    .fill(\n",
+    "        dataset='RSGluon',\n",
+    "        mass=ak.flatten( events_rsgluon.FatJet.msoftdrop ),\n",
+    "    )\n",
+    "    .fill(\n",
+    "        dataset='Wjets',\n",
+    "        mass=ak.flatten( events_wjets.FatJet.msoftdrop ),\n",
+    "    )\n",
+    ").plot1d(density=True)\n",
+    "\n",
+    "ax.legend()\n",
+    "# ax.set_yscale(\"log\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4.2: Jet Grooming algorithms\n",
     "\n",
     "Let's make a plot comparing the ungroomed mass and the softdrop mass:"
    ]
@@ -82,6 +126,51 @@
     ")\n",
     "fig, ax = plt.subplots()\n",
     "hists_mass.plot1d()\n",
+    "ax.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### $\\rho$ parameter\n",
+    "\n",
+    "Let's create this variable and make some comparison plots:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "hists_rho = (\n",
+    "    hist.Hist.new\n",
+    "    .StrCat([\"QCD\", \"ttbar\", \"RSGluon\", \"Wjets\"], name=\"dataset\")\n",
+    "    .Reg(20, -10, 0, name=\"rho\", label='Fatjet rho')\n",
+    "    .Weight()\n",
+    "    .fill(\n",
+    "        dataset='QCD',\n",
+    "        rho=ak.flatten( np.log( np.power( events_qcd.FatJet.msoftdrop / (events_qcd.FatJet.pt * 0.8) , 2 ) ) ),\n",
+    "    )\n",
+    "    .fill(\n",
+    "        dataset='ttbar',\n",
+    "        rho=ak.flatten(np.log( np.power( events_ttbar.FatJet.msoftdrop / (events_ttbar.FatJet.pt * 0.8) , 2 ) ) ),\n",
+    "    )\n",
+    "    .fill(\n",
+    "        dataset='RSGluon',\n",
+    "        rho=ak.flatten(np.log( np.power( events_rsgluon.FatJet.msoftdrop / (events_rsgluon.FatJet.pt * 0.8) , 2 ) ) ),\n",
+    "    )\n",
+    "    .fill(\n",
+    "        dataset='Wjets',\n",
+    "        rho=ak.flatten(np.log( np.power( events_wjets.FatJet.msoftdrop / (events_wjets.FatJet.pt * 0.8) , 2 ) ) ),\n",
+    "    )\n",
+    ").plot1d(density=True)\n",
+    "\n",
     "ax.legend()"
    ]
   },
@@ -225,94 +314,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 4.3: $\\rho$ parameter\n",
+    "## Exercise 4.4: Taggers\n",
     "\n",
-    "Let's create this variable and make some comparison plots:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "\n",
-    "hists_rho = (\n",
-    "    hist.Hist.new\n",
-    "    .StrCat([\"QCD\", \"ttbar\", \"RSGluon\", \"Wjets\"], name=\"dataset\")\n",
-    "    .Reg(20, -10, 0, name=\"rho\", label='Fatjet rho')\n",
-    "    .Weight()\n",
-    "    .fill(\n",
-    "        dataset='QCD',\n",
-    "        rho=ak.flatten( np.log( np.power( jets_qcd.msoftdrop / (jets_qcd.pt * 0.8) , 2 ) ) ),\n",
-    "    )\n",
-    "    .fill(\n",
-    "        dataset='ttbar',\n",
-    "        rho=ak.flatten(np.log( np.power( jets_ttbar.msoftdrop / (jets_ttbar.pt * 0.8) , 2 ) ) ),\n",
-    "    )\n",
-    "    .fill(\n",
-    "        dataset='RSGluon',\n",
-    "        rho=ak.flatten(np.log( np.power( jets_rsgluon.msoftdrop / (jets_rsgluon.pt * 0.8) , 2 ) ) ),\n",
-    "    )\n",
-    "    .fill(\n",
-    "        dataset='Wjets',\n",
-    "        rho=ak.flatten(np.log( np.power( jets_wjets.msoftdrop / (jets_wjets.pt * 0.8) , 2 ) ) ),\n",
-    "    )\n",
-    ").plot1d(density=True)\n",
-    "\n",
-    "ax.legend()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exercise 4.4: Jet Mass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "\n",
-    "hists_mass = (\n",
-    "    hist.Hist.new\n",
-    "    .StrCat([\"QCD\", \"ttbar\", \"RSGluon\", \"Wjets\"], name=\"dataset\")\n",
-    "    .Reg(50, 50, 300, name=\"mass\", label='Fatjet softdrop mass')\n",
-    "    .Weight()\n",
-    "    .fill(\n",
-    "        dataset='QCD',\n",
-    "        mass=ak.flatten( jets_qcd.msoftdrop ),\n",
-    "    )\n",
-    "    .fill(\n",
-    "        dataset='ttbar',\n",
-    "        mass=ak.flatten( jets_ttbar.msoftdrop ),\n",
-    "    )\n",
-    "    .fill(\n",
-    "        dataset='RSGluon',\n",
-    "        mass=ak.flatten( jets_rsgluon.msoftdrop ),\n",
-    "    )\n",
-    "    .fill(\n",
-    "        dataset='Wjets',\n",
-    "        mass=ak.flatten( jets_wjets.msoftdrop ),\n",
-    "    )\n",
-    ").plot1d(density=True)\n",
-    "\n",
-    "ax.legend()\n",
-    "# ax.set_yscale(\"log\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exercise 4.5: W tagging\n",
+    "### W tagging\n",
     "\n",
     "Let's compare the tau2 / tau1 ratio for the AK8 jets from Standard Model top quarks to those from the QCD sample:"
    ]
@@ -439,7 +443,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 4.6: top tagging\n",
+    "### top tagging\n",
     "\n",
     "Let's repeat the same exercise but now using the subtructure variables for top tagging:"
    ]
