--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -72,7 +72,7 @@ These algorithms follow this recipe:
  * Defining $$d_{ij} = min(p^{2p}_{ti},p^{2p}_{tj}) \Delta R^{2}_{ij}/R^2$$ and $d_{iB} = p_{ti}^{2p}$. We combine two particles if $d_{ij} < d_{iB}$. 
    * if $p=1$ then _kt algorithm_ (KT)
    * if $p=0$ then _Cambridge Aachen algorithm_ (CA)
-   * if $p=-1$ then _kt algorithm_ (KT)
+   * if $p=-1$ then _antikt algorithm_ (AK)
  * Stop when $d_{ij} > d_{iB}$.
 
 <figure>
