updateing README and removing old folders

--- a/notebooks/Jet_Energy_Corrections.ipynb
+++ b/notebooks/Jet_Energy_Corrections.ipynb
@@ -378,12 +378,12 @@
     "\n",
     "ext = extractor()\n",
     "ext.add_weight_sets([\n",
-    "    \"* * ../../data/JECs/Summer19UL18_V5_MC/Summer19UL18_V5_MC_L1FastJet_AK4PFchs.txt\",\n",
-    "    \"* * ../../data/JECs/Summer19UL18_V5_MC/Summer19UL18_V5_MC_L2Relative_AK4PFchs.txt\",\n",
-    "    \"* * ../../data/JECs/Summer19UL18_V5_MC/Summer19UL18_V5_MC_L2L3Residual_AK4PFchs.txt\",\n",
-    "    \"* * ../../data/JECs/Summer19UL18_V5_MC/Summer19UL18_V5_MC_L3Absolute_AK4PFchs.txt\",\n",
-    "    \"* * ../../data/JECs/Summer19UL18_V5_MC/Summer19UL18_JRV2_MC_PtResolution_AK4PFchs.txt\",\n",
-    "    \"* * ../../data/JECs/Summer19UL18_V5_MC/Summer19UL18_JRV2_MC_SF_AK4PFchs.txt\",\n",
+    "    \"* * ../data/JECs/Summer19UL18_V5_MC/Summer19UL18_V5_MC_L1FastJet_AK4PFchs.txt\",\n",
+    "    \"* * ../data/JECs/Summer19UL18_V5_MC/Summer19UL18_V5_MC_L2Relative_AK4PFchs.txt\",\n",
+    "    \"* * ../data/JECs/Summer19UL18_V5_MC/Summer19UL18_V5_MC_L2L3Residual_AK4PFchs.txt\",\n",
+    "    \"* * ../data/JECs/Summer19UL18_V5_MC/Summer19UL18_V5_MC_L3Absolute_AK4PFchs.txt\",\n",
+    "    \"* * ../data/JECs/Summer19UL18_V5_MC/Summer19UL18_JRV2_MC_PtResolution_AK4PFchs.txt\",\n",
+    "    \"* * ../data/JECs/Summer19UL18_V5_MC/Summer19UL18_JRV2_MC_SF_AK4PFchs.txt\",\n",
     "])\n",
     "ext.finalize()\n",
     "\n",
@@ -470,8 +470,12 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
