--- a/notebooks/Jet_Substructure.ipynb
+++ b/notebooks/Jet_Substructure.ipynb
@@ -519,8 +519,12 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
