--- a/notebooks/Jets_101.ipynb
+++ b/notebooks/Jets_101.ipynb
@@ -321,8 +321,12 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
