--- a/notebooks/Jet_Energy_Corrections.ipynb
+++ b/notebooks/Jet_Energy_Corrections.ipynb
@@ -42,7 +42,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = \"/eos/user/c/cmsdas/2024/short-ex-jet/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/106X_upgrade2018_realistic_v16_L1v1-v1/2520000/130AF209-596A-BA46-BA9E-D8847511BB0F.root\"\n",
+    "fname = \"/work/projects/hats2024/jets/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/106X_upgrade2018_realistic_v16_L1v1-v1/2520000/130AF209-596A-BA46-BA9E-D8847511BB0F.root\"\n",
+    "\n",
+    "### if you need to run at the cmslpc\n",
+    "# fname = \"/eos/user/c/cmsdas/2024/short-ex-jet/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/106X_upgrade2018_realistic_v16_L1v1-v1/2520000/130AF209-596A-BA46-BA9E-D8847511BB0F.root\"\n",
+    "\n",
     "events = NanoEventsFactory.from_root( fname, schemaclass=NanoAODSchema.v6).events()"
    ]
   },
