adding noise filters

--- a/notebooks/Pileup.ipynb
+++ b/notebooks/Pileup.ipynb
@@ -38,11 +38,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = \"/work/projects/hats2024/jets/RunIISummer20UL18NanoAODv9/QCD_Pt-15to7000_TuneCP5_Flat2018_13TeV_pythia8/NANOAODSIM/FlatPU0to75_20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2550000/FC0443BA-3466-0F45-A38F-54B014867DEF.root\"\n",
+    "# fname = \"/work/projects/hats2024/jets/RunIISummer20UL18NanoAODv9/QCD_Pt-15to7000_TuneCP5_Flat2018_13TeV_pythia8/NANOAODSIM/FlatPU0to75_20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2550000/FC0443BA-3466-0F45-A38F-54B014867DEF.root\"\n",
     "#fname = \"/work/projects/hats2024/jets/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2520000/47A0D984-2D6F-0D42-B5CB-906786434349.root\"\n",
     "\n",
     "### if you need to run at the cmslpc\n",
-    "#fname = \"/eos/user/c/cmsdas/2024/short-ex-jet/RunIISummer20UL18NanoAODv9/QCD_Pt-15to7000_TuneCP5_Flat2018_13TeV_pythia8/NANOAODSIM/FlatPU0to75_20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2550000/FC0443BA-3466-0F45-A38F-54B014867DEF.root\"\n",
+    "fname = \"root://cmseos.fnal.gov//store/user/cmsdas/2024/short_exercises/jets/RunIISummer20UL18NanoAODv9/QCD_Pt-15to7000_TuneCP5_Flat2018_13TeV_pythia8/NANOAODSIM/FlatPU0to75_20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2550000/FC0443BA-3466-0F45-A38F-54B014867DEF.root\"\n",
     "##fname = \"/eos/user/c/cmsdas/2024/short-ex-jet/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2520000/47A0D984-2D6F-0D42-B5CB-906786434349.root\"\n",
     "\n",
     "events = NanoEventsFactory.from_root( fname, schemaclass=NanoAODSchema.v6).events()"
@@ -382,6 +382,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Exercise 2.5: Noisy event filters \n",
+    "\n",
+    "You can check the noise filters in the following twiki: [https://twiki.cern.ch/twiki/bin/view/CMS/MissingETOptionalFiltersRun2#Run_2_recommendations](https://twiki.cern.ch/twiki/bin/view/CMS/MissingETOptionalFiltersRun2#Run_2_recommendations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noise_filters = events.Flag.goodVertices & events.Flag.globalSuperTightHalo2016Filter \\\n",
+    "                & events.Flag.HBHENoiseFilter & events.Flag.HBHENoiseIsoFilter \\\n",
+    "                & events.Flag.EcalDeadCellTriggerPrimitiveFilter & events.Flag.BadPFMuonFilter \\\n",
+    "                & events.Flag.eeBadScFilter & events.Flag.ecalBadCalibFilter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Total number of events {ak.num(events.event, axis=0)}\")\n",
+    "print(f\"Total number of clean events {ak.num(events[noise_filters].event, axis=0)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Your turn\n",
     "\n",
     "How different do the other jet distributions look like with jetId implemented?"
@@ -411,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
