--- a/notebooks/Pileup.ipynb
+++ b/notebooks/Pileup.ipynb
@@ -38,11 +38,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fname = \"/work/projects/hats2024/jets/RunIISummer20UL18NanoAODv9/QCD_Pt-15to7000_TuneCP5_Flat2018_13TeV_pythia8/NANOAODSIM/FlatPU0to75_20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2550000/FC0443BA-3466-0F45-A38F-54B014867DEF.root\"\n",
+    "fname = \"/work/projects/hats2024/jets/RunIISummer20UL18NanoAODv9/QCD_Pt-15to7000_TuneCP5_Flat2018_13TeV_pythia8/NANOAODSIM/FlatPU0to75_20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2550000/FC0443BA-3466-0F45-A38F-54B014867DEF.root\"\n",
     "#fname = \"/work/projects/hats2024/jets/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2520000/47A0D984-2D6F-0D42-B5CB-906786434349.root\"\n",
     "\n",
     "### if you need to run at the cmslpc\n",
-    "fname = \"root://cmseos.fnal.gov//store/user/cmsdas/2024/short_exercises/jets/RunIISummer20UL18NanoAODv9/QCD_Pt-15to7000_TuneCP5_Flat2018_13TeV_pythia8/NANOAODSIM/FlatPU0to75_20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2550000/FC0443BA-3466-0F45-A38F-54B014867DEF.root\"\n",
+    "# fname = \"root://cmseos.fnal.gov//store/user/cmsdas/2024/short_exercises/jets/RunIISummer20UL18NanoAODv9/QCD_Pt-15to7000_TuneCP5_Flat2018_13TeV_pythia8/NANOAODSIM/FlatPU0to75_20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2550000/FC0443BA-3466-0F45-A38F-54B014867DEF.root\"\n",
     "##fname = \"/eos/user/c/cmsdas/2024/short-ex-jet/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2520000/47A0D984-2D6F-0D42-B5CB-906786434349.root\"\n",
     "\n",
     "events = NanoEventsFactory.from_root( fname, schemaclass=NanoAODSchema.v6).events()"
